# Out_Reach_Agent

sendgrid_mailtool/: README.md  pyproject.toml
sendgrid_mailtool/src/sendgrid_mailtool/: crew.py  main.py
sendgrid_mailtool/src/sendgrid_mailtool/config/: agents.yaml  tasks.yaml
sendgrid_mailtool/src/sendgrid_mailtool/tools/: sendgrid_email_tool.py  twilio_sms_tool.py
sendgrid_mailtool/webhook_receiver/: database.py  email_template.py  main.py  utils.py
